# projet-C

./: CMakeLists.txt  LICENSE  README.rst
docs/: conf.py  index.rst
src/: CMakeLists.txt  Doxyfile  RulesConfig.cmake.in  app.c  rules.c  rules.h  rules.inc  rules.pc.in
test/: CMakeLists.txt  test-add-constraint-add-result.c  test-add-rule.c  test-clone-rule.c  test-create-destroy-rule-list.c  test-create-destroy-rule.c  test-delete-rule.c  test-erase-rule-list.c  test-erase-rule.c  test-rules-check.c  test-rules.c
